--- a/index.html
+++ b/index.html
@@ -1568,10 +1568,16 @@
 
             .hero h1 {
                 font-size: 28px;
+                margin-bottom: 15px;
             }
 
             .hero p {
                 font-size: 16px;
+                margin-bottom: 20px;
+            }
+
+            .hero {
+                padding: 60px 20px;
             }
 
             .consultant-carousel {
@@ -1608,17 +1614,17 @@
             }
 
             .section-title {
-                font-size: 26px;
-                margin-bottom: 40px;
+                font-size: 24px;
+                margin-bottom: 30px;
             }
 
             .plans-section {
-                padding: 50px 15px;
+                padding: 35px 10px;
             }
 
             .plan-card {
                 min-width: 260px;
-                padding: 25px 20px;
+                padding: 20px 15px;
             }
 
             .plan-icon svg {
@@ -1627,20 +1633,20 @@
             }
 
             .plan-name {
-                font-size: 22px;
+                font-size: 20px;
             }
 
             .plan-speed {
-                font-size: 32px;
+                font-size: 30px;
             }
 
             .plan-price {
-                font-size: 26px;
+                font-size: 24px;
             }
 
             .plan-features li {
-                font-size: 14px;
-                padding: 8px 0;
+                font-size: 13px;
+                padding: 7px 0;
             }
 
             .carousel-button {
@@ -1650,20 +1656,20 @@
             }
 
             .features {
-                padding: 50px 15px;
-                gap: 25px;
+                padding: 35px 10px;
+                gap: 20px;
             }
 
             .feature-card {
-                padding: 25px 20px;
+                padding: 20px 15px;
             }
 
             .feature-card h3 {
-                font-size: 18px;
+                font-size: 17px;
             }
 
             .feature-card p {
-                font-size: 14px;
+                font-size: 13px;
             }
 
             .feature-icon svg {
@@ -2343,61 +2349,115 @@
 
         @media (max-width: 768px) {
             .mega-black-banner {
-                padding: 40px 15px;
+                padding: 25px 10px;
                 margin-top: 70px;
             }
 
+            .promo-tag {
+                padding: 8px 18px;
+                margin-bottom: 15px;
+            }
+
+            .promo-tag span {
+                font-size: 10px;
+                letter-spacing: 1px;
+            }
+
+            .promo-tag svg {
+                width: 16px;
+                height: 16px;
+            }
+
+            .main-title-container {
+                margin: 15px 0;
+            }
+
+            .main-title {
+                font-size: 48px;
+                letter-spacing: 6px;
+            }
+
+            .main-title .mega-black {
+                -webkit-text-stroke: 2px #ff6b00;
+                text-stroke: 2px #ff6b00;
+            }
+
+            .main-title .brisanet {
+                font-size: 54px;
+            }
+
             .countdown-container {
-                gap: 12px;
+                gap: 10px;
+                margin: 20px auto 15px;
             }
 
             .countdown-header {
-                gap: 8px;
+                gap: 6px;
             }
 
             .countdown-header-icon {
-                width: 22px;
-                height: 22px;
+                width: 20px;
+                height: 20px;
             }
 
             .countdown-label {
-                font-size: 14px;
+                font-size: 11px;
+                letter-spacing: 1px;
             }
 
             .countdown-timer {
-                gap: 10px;
-                padding: 15px 25px;
+                gap: 8px;
+                padding: 12px 18px;
             }
 
             .countdown-icon {
-                width: 35px;
-                height: 35px;
+                width: 32px;
+                height: 32px;
             }
 
             .countdown-unit {
-                padding: 10px 12px;
+                padding: 8px 12px;
                 min-width: 60px;
             }
 
             .countdown-number {
-                font-size: 32px;
+                font-size: 26px;
             }
 
             .countdown-text {
-                font-size: 10px;
+                font-size: 9px;
             }
 
             .countdown-separator {
-                font-size: 28px;
+                font-size: 22px;
             }
 
-            .main-title {
-                font-size: 60px;
-                letter-spacing: 10px;
+            .banner-subtitle {
+                font-size: 14px;
+                gap: 8px;
+                margin-top: 12px;
+                padding: 0 5px;
+                line-height: 1.4;
             }
 
-            .main-title .brisanet {
-                font-size: 70px;
+            .banner-subtitle svg {
+                width: 18px;
+                height: 18px;
+                flex-shrink: 0;
+            }
+
+            .banner-cta {
+                padding: 12px 30px;
+                font-size: 14px;
+                letter-spacing: 1.5px;
+                gap: 6px;
+                margin-top: 20px;
+            }
+
+            .banner-cta svg {
+                width: 20px;
+                height: 20px;
+            }
             }
 
             .main-title .mega-black {
