--- a/index.html
+++ b/index.html
@@ -2658,14 +2658,15 @@
                         </svg>
                     </div>
                     <h3 class="plan-name">Combo Essencial</h3>
-                    <div class="plan-speed">500MB + 20GB</div>
+                    <div class="plan-speed">500MB + 50GB</div>
                     <div class="plan-price">R$ 84,90<span>/mês</span></div>
                     <ul class="plan-features">
                         <li>Internet Fibra 500MB</li>
-                        <li>20GB no celular</li>
+                        <li>50GB no celular</li>
                         <li>Ligações ilimitadas</li>
                         <li>Apps ilimitados</li>
                         <li>Instalação grátis</li>
+                        <li>Preço válido por 6 meses</li>
                     </ul>
                     <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
@@ -2680,14 +2681,15 @@
                         </svg>
                     </div>
                     <h3 class="plan-name">Combo Plus</h3>
-                    <div class="plan-speed">600MB + 20GB</div>
+                    <div class="plan-speed">700MB + 50GB</div>
                     <div class="plan-price">R$ 99,90<span>/mês</span></div>
                     <ul class="plan-features">
-                        <li>Internet Fibra 600MB</li>
-                        <li>20GB no celular</li>
+                        <li>Internet Fibra 700MB</li>
+                        <li>50GB no celular</li>
                         <li>Ligações ilimitadas</li>
                         <li>Apps ilimitados</li>
                         <li>Instalação grátis</li>
+                        <li>Preço válido por 6 meses</li>
                     </ul>
                     <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
@@ -2698,15 +2700,16 @@
                             <path d="M13 3L4 14H12L11 21L20 10H12L13 3Z" fill="#ff6b00" stroke="#ff8533" stroke-width="1.5" stroke-linejoin="round"/>
                         </svg>
                     </div>
-                    <h3 class="plan-name">Combo Premium</h3>
-                    <div class="plan-speed">700MB + 20GB</div>
-                    <div class="plan-price">R$ 109,90<span>/mês</span></div>
+                    <h3 class="plan-name">Combo Família</h3>
+                    <div class="plan-speed">500MB + 2 Linhas</div>
+                    <div class="plan-price">R$ 104,90<span>/mês</span></div>
                     <ul class="plan-features">
-                        <li>Internet Fibra 700MB</li>
-                        <li>20GB no celular</li>
+                        <li>Internet Fibra 500MB</li>
+                        <li>50GB no celular</li>
                         <li>Ligações ilimitadas</li>
                         <li>Apps ilimitados</li>
                         <li>Instalação grátis</li>
+                        <li>Preço válido por 6 meses</li>
                     </ul>
                     <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
@@ -2795,7 +2798,6 @@
                         <li>Waze ilimitado</li>
                         <li>Facebook ilimitado</li>
                         <li>WhatsApp ilimitado</li>
-                        <li>Cobertura nacional</li>
                     </ul>
                     <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
@@ -2818,7 +2820,6 @@
                         <li>Waze ilimitado</li>
                         <li>Facebook ilimitado</li>
                         <li>WhatsApp ilimitado</li>
-                        <li>Cobertura nacional</li>
                     </ul>
                     <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
@@ -2841,7 +2842,6 @@
                         <li>Waze ilimitado</li>
                         <li>Facebook ilimitado</li>
                         <li>WhatsApp ilimitado</li>
-                        <li>Cobertura nacional</li>
                     </ul>
                     <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
