--- a/index.html
+++ b/index.html
@@ -2668,7 +2668,7 @@
                         <li>Instalação grátis</li>
                         <li>Preço válido por 6 meses</li>
                     </ul>
-                    <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
+                    <a href="https://brisanet.igoropenai.com.br/planos.html" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
 
                 <div class="plan-card">
@@ -2681,7 +2681,7 @@
                         </svg>
                     </div>
                     <h3 class="plan-name">Combo Plus</h3>
-                    <div class="plan-speed">700MB + 50GB</div>
+                    <div class="plan-speed">700MB + GB</div>
                     <div class="plan-price">R$ 99,90<span>/mês</span></div>
                     <ul class="plan-features">
                         <li>Internet Fibra 700MB</li>
