--- a/planos.html
+++ b/planos.html
@@ -1011,7 +1011,7 @@
                 
                 console.log('Enviando mensagem:', payload);
                 
-                const response = await fetch('https://n8n-n8n.rthuab.easypanel.host/webhook/dbba089c-0eef-48b7-8dd6-dfb3f1fe5046/chat', {
+                const response = await fetch('igprhttps://n8n-n8n.rthuab.easypanel.host/webhook/dbba089c-0eef-48b7-8dd6-dfb3f1fe5046/chat', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
