--- a/index.html
+++ b/index.html
@@ -2668,7 +2668,7 @@
                         <li>Instalação grátis</li>
                         <li>Preço válido por 6 meses</li>
                     </ul>
-                    <a href="https://brisanet.igoropenai.com.br/planos.html" target="_blank" class="cta-button">Assinar Agora</a>
+                    <a href="https://planos.igoropenai.com.br/webhook/planos" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
 
                 <div class="plan-card">
@@ -3248,3 +3248,4 @@
     </script>
 </body>
 </html>
+
