--- a/index.html
+++ b/index.html
@@ -2691,7 +2691,7 @@
                         <li>Instalação grátis</li>
                         <li>Preço válido por 6 meses</li>
                     </ul>
-                    <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
+                    <a href="https://planos.igoropenai.com.br/webhook/planos" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
 
                 <div class="plan-card">
@@ -2711,7 +2711,7 @@
                         <li>Instalação grátis</li>
                         <li>Preço válido por 6 meses</li>
                     </ul>
-                    <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
+                    <a href="https://planos.igoropenai.com.br/webhook/planos" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
             </div>
             <button class="carousel-button next" onclick="moveCarousel('combo', 1)">›</button>
@@ -2799,7 +2799,7 @@
                         <li>Facebook ilimitado</li>
                         <li>WhatsApp ilimitado</li>
                     </ul>
-                    <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
+                    <a href="https://planos.igoropenai.com.br/webhook/planos" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
 
                 <div class="plan-card">
@@ -2821,7 +2821,7 @@
                         <li>Facebook ilimitado</li>
                         <li>WhatsApp ilimitado</li>
                     </ul>
-                    <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
+                    <a href="hhttps://planos.igoropenai.com.br/webhook/planos" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
 
                 <div class="plan-card">
@@ -2843,7 +2843,7 @@
                         <li>Facebook ilimitado</li>
                         <li>WhatsApp ilimitado</li>
                     </ul>
-                    <a href="https://brisanet.igorbrisanet.shop/webhook/contratar" target="_blank" class="cta-button">Assinar Agora</a>
+                    <a href="https://planos.igoropenai.com.br/webhook/planos" target="_blank" class="cta-button">Assinar Agora</a>
                 </div>
             </div>
             <button class="carousel-button next" onclick="moveCarousel('movel', 1)">›</button>
@@ -3248,4 +3248,5 @@
     </script>
 </body>
 </html>
+
 
